@@ -1,6 +1,9 @@
 0.8.5.dev1
 ----------------
 
+- re-fix issue6: tests and fixes for problems, uncovered
+  by failing installs for icalendar and django-debug-toolbar
+
 - fix transition from going offline to online for
   not yet cached projects by re-trying cached
   http gets which caused a <200 or >=400 http 
